crates/translator/tests/snapshots/golden__reconcile_scale_up_emits_single_add_backend.snap
---
source: crates/translator/tests/golden.rs
expression: reqs
---
[
  {
    "request_type": {
      "ADD_BACKEND": {
        "cluster_id": "app",
        "backend_id": "app-10-0-0-3-8080",
        "address": {
          "ip": {
            "inner": {
              "V4": 167772163
            }
          },
          "port": 8080
        },
        "sticky_id": null,
        "load_balancing_parameters": null,
        "backup": null
      }
    }
  }
]
